--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,13 @@
       "args": [
         "%DOCFILE%"
       ]
+    },
+    {
+      "name": "biber",
+      "command": "biber",
+      "args": [
+        "%DOCFILE%"
+      ]
     }
   ],
   // 编译命令
@@ -52,26 +59,35 @@
         "pdflatex"
       ]
     },
+    // {
+    //   "name": "xe->bib->xe->xe",
+    //   "tools": [
+    //     "xelatex",
+    //     "bibtex",
+    //     "xelatex",
+    //     "xelatex"
+    //   ]
+    // },
     {
-      "name": "xe->bib->xe->xe",
+      "name": "xe->biber->xe->xe",
       "tools": [
         "xelatex",
-        "bibtex",
+        "biber",
         "xelatex",
         "xelatex"
       ]
     },
-    {
-      "name": "pdf->bib->pdf->pdf",
-      "tools": [
-        "pdflatex",
-        "bibtex",
-        "pdflatex",
-        "pdflatex"
-      ]
-    }
+    // {
+    //   "name": "pdf->bib->pdf->pdf",
+    //   "tools": [
+    //     "pdflatex",
+    //     "bibtex",
+    //     "pdflatex",
+    //     "pdflatex"
+    //   ]
+    // }
   ],
-  "latex-workshop.latex.recipe.default": "xe->bib->xe->xe",
+  // "latex-workshop.latex.recipe.default": "xe->biber->xe->xe",
   "explorer.fileNesting.enabled":true,
   "explorer.fileNesting.patterns":{
     "*.tex": "${basename}.*"
